remove seat license and rebac service base layer
