# api/gen/v1alpha/core.swagger.json
@@ -9,12 +9,6 @@
       "name": "CheckPermission"
     },
     {
-      "name": "LicenseService"
-    },
-    {
-      "name": "ImportService"
-    },
-    {
       "name": "HealthCheckService"
     }
   ],
@@ -78,255 +72,6 @@
           "HealthCheckService"
         ]
       }
-    },
-    "/v1alpha/orgs/{orgId}/entitlements/{serviceId}": {
-      "post": {
-        "operationId": "LicenseService_EntitleOrg",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/v1alphaEntitleOrgResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "orgId",
-            "description": "the ID of an org to entitle",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "serviceId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "maxSeats": {
-                  "type": "string",
-                  "format": "int64",
-                  "description": "the amount of seats that are granted for this org."
-                }
-              },
-              "title": "EntitleOrgRequest"
-            }
-          }
-        ],
-        "tags": [
-          "LicenseService"
-        ]
-      }
-    },
-    "/v1alpha/orgs/{orgId}/import": {
-      "post": {
-        "operationId": "ImportService_ImportOrg",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/v1alphaImportOrgResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "orgId",
-            "description": "the ID of an org to import",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "title": "ImportOrgRequest to trigger an import for an orgs users into spicedb"
-            }
-          }
-        ],
-        "tags": [
-          "ImportService"
-        ]
-      }
-    },
-    "/v1alpha/orgs/{orgId}/licenses/{serviceId}": {
-      "get": {
-        "operationId": "LicenseService_GetLicense",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/v1alphaGetLicenseResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "orgId",
-            "description": "The id of an license-able organization.",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "serviceId",
-            "description": "A \"serviceId\" is an arbitrary identifier for a service with limited access that may be granted to an organization.",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "tags": [
-          "LicenseService"
-        ]
-      },
-      "post": {
-        "operationId": "LicenseService_ModifySeats",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/v1alphaModifySeatsResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "orgId",
-            "description": "The id of an license-able organization.",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "serviceId",
-            "description": "A \"serviceId\" is an arbitrary identifier for a service with limited access that may be granted to an organization.",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "assign": {
-                  "type": "array",
-                  "items": {
-                    "type": "string"
-                  },
-                  "description": "User IDs to assign to the license."
-                },
-                "unassign": {
-                  "type": "array",
-                  "items": {
-                    "type": "string"
-                  },
-                  "description": "User IDs to remove from the license."
-                }
-              },
-              "description": "ModifySeatsRequest assuming we get the userId etc from the requester in the authorization header to validate if an \"admin\" can actually add licenses."
-            }
-          }
-        ],
-        "tags": [
-          "LicenseService"
-        ]
-      }
-    },
-    "/v1alpha/orgs/{orgId}/licenses/{serviceId}/seats": {
-      "get": {
-        "operationId": "LicenseService_GetSeats",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/v1alphaGetSeatsResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "orgId",
-            "description": "The id of an license-able organization.",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "serviceId",
-            "description": "A \"serviceId\" is an arbitrary identifier for a service with limited access that may be granted to an organization.",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "includeUsers",
-            "description": "true: include enriched user representation. false: do not include (only IDs). Default: true.",
-            "in": "query",
-            "required": false,
-            "type": "boolean"
-          },
-          {
-            "name": "filter",
-            "description": "filter, either assigned or assignable users returned. Default: assigned.",
-            "in": "query",
-            "required": false,
-            "type": "string",
-            "enum": [
-              "assigned",
-              "assignable"
-            ],
-            "default": "assigned"
-          }
-        ],
-        "tags": [
-          "LicenseService"
-        ]
-      }
     }
   },
   "definitions": {
@@ -388,89 +133,6 @@
     },
     "v1alphaEmpty": {
       "type": "object"
-    },
-    "v1alphaEntitleOrgResponse": {
-      "type": "object",
-      "title": "EntitleOrgResponse is the response when entitling an org"
-    },
-    "v1alphaGetLicenseResponse": {
-      "type": "object",
-      "properties": {
-        "seatsTotal": {
-          "type": "string",
-          "format": "int64",
-          "description": "Total number of seats assignable."
-        },
-        "seatsAvailable": {
-          "type": "string",
-          "format": "int64",
-          "description": "Current number of available seats which can be assigned."
-        }
-      }
-    },
-    "v1alphaGetSeatsResponse": {
-      "type": "object",
-      "properties": {
-        "users": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/v1alphaGetSeatsUserRepresentation"
-          },
-          "description": "Just user IDs, unless \"includeUsers\" = true."
-        }
-      }
-    },
-    "v1alphaGetSeatsUserRepresentation": {
-      "type": "object",
-      "properties": {
-        "displayName": {
-          "type": "string"
-        },
-        "id": {
-          "type": "string"
-        },
-        "assigned": {
-          "type": "boolean"
-        },
-        "firstName": {
-          "type": "string"
-        },
-        "lastName": {
-          "type": "string"
-        },
-        "username": {
-          "type": "string"
-        }
-      },
-      "description": "we may return more userinfo, this is a starting point."
-    },
-    "v1alphaImportOrgResponse": {
-      "type": "object",
-      "properties": {
-        "importedUsersCount": {
-          "type": "string",
-          "format": "uint64",
-          "title": "Count of how many users were imported"
-        },
-        "notImportedUsersCount": {
-          "type": "string",
-          "format": "uint64",
-          "title": "Count of how many users were not imported, e.g. because they already exist"
-        }
-      },
-      "title": "ImportOrgResponse"
-    },
-    "v1alphaModifySeatsResponse": {
-      "type": "object"
-    },
-    "v1alphaSeatFilterType": {
-      "type": "string",
-      "enum": [
-        "assigned",
-        "assignable"
-      ],
-      "default": "assigned"
     }
   }
 }
