# api/grpc/Server.go
@@ -8,7 +8,6 @@ import (
 	"authz/bootstrap/serviceconfig"
 	"authz/domain"
 	"context"
-	"errors"
 	"net"
 	"os"
 	"sync"
@@ -20,192 +19,9 @@ import (
 
 // Server represents a Server host service
 type Server struct {
-	srv               *grpc.Server
-	AccessAppService  *application.AccessAppService
-	LicenseAppService *application.LicenseAppService
-	ServiceConfig     *serviceconfig.ServiceConfig
-}
-
-// GetLicense returns licenses for a given org and service
-func (s *Server) GetLicense(ctx context.Context, grpcReq *core.GetLicenseRequest) (*core.GetLicenseResponse, error) {
-	requestor, err := s.getRequestorIdentityFromGrpcContext(ctx)
-	if err != nil {
-		return nil, err
-	}
-
-	// Validate if the requestor is the orgAdmin of the org in the req
-	requestorOrgAdmin := s.getIsOrgAdminFromGrpcContext(ctx)
-	requestorOrgID := s.getRequestorOrgIDFromGrpcContext(ctx)
-
-	if !isRequestorOrgAdmin(requestorOrgAdmin, requestorOrgID, grpcReq.OrgId) {
-		return nil, domain.ErrNotAuthorized
-	}
-
-	req := application.GetSeatAssignmentCountsRequest{
-		Requestor: requestor,
-		OrgID:     grpcReq.OrgId,
-		ServiceID: grpcReq.ServiceId,
-	}
-	limit, available, err := s.LicenseAppService.GetSeatAssignmentCounts(req)
-	if err != nil {
-		return nil, err
-	}
-
-	return &core.GetLicenseResponse{
-		SeatsTotal:     int64(limit),
-		SeatsAvailable: int64(available),
-	}, nil
-}
-
-// ModifySeats assigns and/or unassigns users to/from seats for a given org and service
-func (s *Server) ModifySeats(ctx context.Context, grpcReq *core.ModifySeatsRequest) (*core.ModifySeatsResponse, error) {
-	requestor, err := s.getRequestorIdentityFromGrpcContext(ctx)
-	if err != nil {
-		return nil, err
-	}
-
-	// Validate if the requestor is the orgAdmin of the org in the req
-	requestorOrgAdmin := s.getIsOrgAdminFromGrpcContext(ctx)
-	requestorOrgID := s.getRequestorOrgIDFromGrpcContext(ctx)
-
-	if !isRequestorOrgAdmin(requestorOrgAdmin, requestorOrgID, grpcReq.OrgId) {
-		return nil, domain.ErrNotAuthorized
-	}
-
-	req := application.ModifySeatAssignmentRequest{
-		Requestor: requestor,
-		OrgID:     grpcReq.OrgId,
-		ServiceID: grpcReq.ServiceId,
-		Assign:    grpcReq.Assign,
-		Unassign:  grpcReq.Unassign,
-	}
-
-	err = s.LicenseAppService.ModifySeats(req)
-
-	if err != nil {
-		return nil, err
-	}
-	return &core.ModifySeatsResponse{}, nil
-}
-
-// GetSeats returns seats for a given org and service
-func (s *Server) GetSeats(ctx context.Context, grpcReq *core.GetSeatsRequest) (*core.GetSeatsResponse, error) {
-	requestor, err := s.getRequestorIdentityFromGrpcContext(ctx)
-	if err != nil {
-		return nil, err
-	}
-
-	// Validate if the requestor is the orgAdmin of the org in the req
-	requestorOrgAdmin := s.getIsOrgAdminFromGrpcContext(ctx)
-	requestorOrgID := s.getRequestorOrgIDFromGrpcContext(ctx)
-
-	if !isRequestorOrgAdmin(requestorOrgAdmin, requestorOrgID, grpcReq.OrgId) {
-		return nil, domain.ErrNotAuthorized
-	}
-
-	includeUsers := true
-	if grpcReq.IncludeUsers != nil {
-		includeUsers = *grpcReq.IncludeUsers
-	}
-
-	assigned := true
-	if grpcReq.Filter != nil {
-		filter := *grpcReq.Filter
-		switch filter {
-		case core.SeatFilterType_assigned:
-			assigned = true
-		case core.SeatFilterType_assignable:
-			assigned = false
-		}
-	}
-
-	req := application.GetSeatAssignmentRequest{
-		Requestor:    requestor,
-		OrgID:        grpcReq.OrgId,
-		ServiceID:    grpcReq.ServiceId,
-		IncludeUsers: includeUsers,
-		Assigned:     assigned,
-	}
-
-	principals, err := s.LicenseAppService.GetSeatAssignments(req)
-	if err != nil {
-		return nil, err
-	}
-
-	resp := &core.GetSeatsResponse{Users: make([]*core.GetSeatsUserRepresentation, len(principals))}
-	for i, p := range principals {
-		resp.Users[i] = &core.GetSeatsUserRepresentation{
-			DisplayName: p.DisplayName(),
-			Id:          string(p.ID),
-			Assigned:    assigned,
-			Username:    p.Username,
-			FirstName:   p.FirstName,
-			LastName:    p.LastName,
-		}
-	}
-
-	return resp, nil
-}
-
-// EntitleOrg entitles an Org for a license to an existing service.
-// TODO: This is a temporary domain endpoint / handler until we get this from another service. So e.g. no serviceId-exists check will be added. We assume that the service is already there instead for now. Also updates not included for now.
-func (s *Server) EntitleOrg(ctx context.Context, entitleOrgReq *core.EntitleOrgRequest) (*core.EntitleOrgResponse, error) {
-	requestor, err := s.getRequestorIdentityFromGrpcContext(ctx)
-	if err != nil {
-		return nil, err
-	}
-
-	if !sliceContains(s.ServiceConfig.AuthzConfig.LicenseImportAllowlist, requestor) {
-		glog.Infof("Received request to entitle Org: %s from Requestor: %s. Requestor. Requestor not authorized. ", entitleOrgReq.OrgId, requestor)
-		return nil, domain.ErrNotAuthorized
-	}
-
-	if entitleOrgReq.MaxSeats < 1 {
-		return nil, errors.New("maxSeats value not valid")
-	}
-	glog.Infof("Received request to entitle Org: %s for a license to service %s with %v seats from Requestor: %s", entitleOrgReq.OrgId, entitleOrgReq.ServiceId, entitleOrgReq.MaxSeats, requestor)
-	evt := application.OrgEntitledEvent{
-		OrgID:     entitleOrgReq.OrgId,
-		ServiceID: entitleOrgReq.ServiceId,
-		MaxSeats:  int(entitleOrgReq.MaxSeats),
-	}
-
-	err = s.LicenseAppService.HandleOrgEntitledEvent(evt)
-	if err != nil {
-		return nil, err
-	}
-
-	resp := &core.EntitleOrgResponse{}
-
-	return resp, nil
-}
-
-// ImportOrg imports users for a given orgID
-func (s *Server) ImportOrg(ctx context.Context, importReq *core.ImportOrgRequest) (*core.ImportOrgResponse, error) {
-	requestor, err := s.getRequestorIdentityFromGrpcContext(ctx)
-	if err != nil {
-		return nil, err
-	}
-
-	if !sliceContains(s.ServiceConfig.AuthzConfig.LicenseImportAllowlist, requestor) {
-		glog.Infof("Received request to import Org: %s from Requestor: %s. Requestor. Requestor not authorized. ", importReq.OrgId, requestor)
-		return nil, domain.ErrNotAuthorized
-	}
-
-	glog.Infof("Received request to import users for Org: %s from Requestor: %s", importReq.OrgId, requestor)
-	evt := application.ImportOrgEvent{
-		OrgID: importReq.OrgId,
-	}
-	result, e2 := s.LicenseAppService.ImportUsersForOrg(evt)
-
-	if e2 != nil {
-		return nil, e2
-	}
-
-	return &core.ImportOrgResponse{
-		ImportedUsersCount:    result.ImportedUsersCount,
-		NotImportedUsersCount: result.NotImportedUsersCount,
-	}, nil
+	srv              *grpc.Server
+	AccessAppService *application.AccessAppService
+	ServiceConfig    *serviceconfig.ServiceConfig
 }
 
 // HealthCheck - heathcheck implementation returns 200 OK
@@ -224,8 +40,8 @@ func sliceContains(s []string, str string) bool {
 }
 
 // NewServer creates a new Server object to use.
-func NewServer(h application.AccessAppService, l application.LicenseAppService, c serviceconfig.ServiceConfig) *Server {
-	return &Server{AccessAppService: &h, ServiceConfig: &c, LicenseAppService: &l}
+func NewServer(h application.AccessAppService, c serviceconfig.ServiceConfig) *Server {
+	return &Server{AccessAppService: &h, ServiceConfig: &c}
 }
 
 // Serve exposes a GRPC endpoint and blocks until processing ends, at which point the waitgroup is signalled. This should be run as a goroutine.
@@ -275,8 +91,6 @@ func (s *Server) Serve(wait *sync.WaitGroup) error {
 
 	core.RegisterHealthCheckServiceServer(s.srv, s)
 	core.RegisterCheckPermissionServer(s.srv, s)
-	core.RegisterLicenseServiceServer(s.srv, s)
-	core.RegisterImportServiceServer(s.srv, s)
 
 	err = s.srv.Serve(ls)
 	if err != nil {
@@ -345,17 +159,17 @@ func (s *Server) getRequestorIdentityFromGrpcContext(ctx context.Context) (strin
 	return reqStr, nil
 }
 
-func (s *Server) getIsOrgAdminFromGrpcContext(ctx context.Context) (isOrgAdmin bool) {
-	requestor := ctx.Value(interceptor.IsRequestorOrgAdminContextKey)
-	isOrgAdmin = requestor.(bool)
-	return
-}
+//func (s *Server) getIsOrgAdminFromGrpcContext(ctx context.Context) (isOrgAdmin bool) {
+//	requestor := ctx.Value(interceptor.IsRequestorOrgAdminContextKey)
+//	isOrgAdmin = requestor.(bool)
+//	return
+//}
 
-func (s *Server) getRequestorOrgIDFromGrpcContext(ctx context.Context) (result string) {
-	requestorOrgID := ctx.Value(interceptor.RequestorOrgContextKey)
-	result = requestorOrgID.(string)
-	return
-}
+//func (s *Server) getRequestorOrgIDFromGrpcContext(ctx context.Context) (result string) {
+//	requestorOrgID := ctx.Value(interceptor.RequestorOrgContextKey)
+//	result = requestorOrgID.(string)
+//	return
+//}
 
 func isRequestorOrgAdmin(requestorOrgAdmin bool, requestorOrgID, orgIDInRequest string) bool {
 	if requestorOrgAdmin && requestorOrgID == orgIDInRequest { // Requestor should be org Admin of the org received in the request path
