# infrastructure/repository/authzed/SpiceDbAccessRepository.go
@@ -5,16 +5,10 @@ import (
 	"authz/domain"
 	"authz/infrastructure/grpcutil"
 	"context"
-	"errors"
-	"fmt"
-	"io"
-	"strconv"
-	"strings"
-
-	"github.com/golang/glog"
 
 	v1 "github.com/authzed/authzed-go/proto/authzed/api/v1"
 	"github.com/authzed/authzed-go/v1"
+	"github.com/golang/glog"
 	"google.golang.org/genproto/googleapis/rpc/errdetails"
 	"google.golang.org/grpc"
 	"google.golang.org/grpc/credentials/insecure"
@@ -26,10 +20,6 @@ const (
 	OrgType = "org"
 	// SubjectType user relation
 	SubjectType = "user"
-	// LicenseSeatObjectType license_seats relation
-	LicenseSeatObjectType = "license_seats"
-	// LicenseObjectType - License relation
-	LicenseObjectType = "license"
 	// LicenseVersionStr - License Version relation
 	LicenseVersionStr = "version"
 )
@@ -62,396 +52,6 @@ func (s *SpiceDbAccessRepository) CheckAccess(subjectID domain.SubjectID, operat
 
 	//DENIED BY DEFAULT
 	return false, nil
-}
-
-// ModifySeats atomically persists changes to seat assignments for a license
-func (s *SpiceDbAccessRepository) ModifySeats(assignedSubjectIDs []domain.SubjectID, removedSubjectIDs []domain.SubjectID, license *domain.License, orgID string, svc domain.Service) error {
-	// Step 1 Add seat changes
-	var relationshipUpdates []*v1.RelationshipUpdate
-
-	var preconditions []*v1.Precondition
-	assignedCount := license.InUse
-
-	for _, subj := range assignedSubjectIDs {
-		relationshipUpdates = append(relationshipUpdates, createUserSeatAssignmentRelationshipUpdate(
-			v1.RelationshipUpdate_OPERATION_CREATE,
-			subj,
-			orgID,
-			svc))
-		preconditions = append(preconditions, createUserNotDisabledPrecondition(subj, orgID), createUserIsMemberOfOrgPrecondition(subj, orgID))
-
-		assignedCount++
-	}
-
-	for _, subj := range removedSubjectIDs {
-		relationshipUpdates = append(relationshipUpdates, createUserSeatAssignmentRelationshipUpdate(
-			v1.RelationshipUpdate_OPERATION_DELETE,
-			subj,
-			orgID,
-			svc))
-		preconditions = append(preconditions, createSeatAssignedPrecondition(subj, orgID, svc))
-
-		assignedCount--
-	}
-
-	// Step 2 Add license changes
-	relationshipUpdates, preconditions = addLicenseVersionSwap(relationshipUpdates, preconditions, license, assignedCount)
-	glog.Infof("Trying to assign %s and unassign %s seats on license %s for org %s with %d of %d seats currently in use.", assignedSubjectIDs, removedSubjectIDs, license.ServiceID, license.OrgID, license.InUse, license.MaxSeats)
-	// Step 3 submit transaction
-	result, err := s.client.WriteRelationships(s.ctx, &v1.WriteRelationshipsRequest{
-		Updates:               relationshipUpdates,
-		OptionalPreconditions: preconditions,
-	})
-
-	// Step 4 examine any errors
-	if err != nil {
-		glog.Errorf("Error assigning %s / unassigning %s seats on license %s for org %s with %d of %d seats currently in use.\nInternal error: %v", assignedSubjectIDs, removedSubjectIDs, license.ServiceID, license.OrgID, license.InUse, license.MaxSeats, err.Error())
-
-		return spiceDbErrorToDomainError(err)
-	}
-
-	glog.Infof("Successfully assigned %s / unassigned %s seats on license %s for org %s. Current seats used: %d of %d\n Internal response: %v", assignedSubjectIDs, removedSubjectIDs, license.ServiceID, license.OrgID, assignedCount, license.MaxSeats, result)
-
-	return nil
-}
-
-func createUserSeatAssignmentRelationshipUpdate(operation v1.RelationshipUpdate_Operation, subj domain.SubjectID, orgID string, svc domain.Service) *v1.RelationshipUpdate {
-	subject, object := createSubjectObjectTuple(SubjectType, string(subj), LicenseSeatObjectType, fmt.Sprintf("%s/%s", orgID, svc.ID))
-	return &v1.RelationshipUpdate{
-		Operation: operation, Relationship: &v1.Relationship{
-			Subject:  subject,
-			Resource: object,
-			Relation: "assigned",
-		}}
-}
-
-func addLicenseVersionSwap(updates []*v1.RelationshipUpdate, conditions []*v1.Precondition, lic *domain.License, newCount int) ([]*v1.RelationshipUpdate, []*v1.Precondition) {
-	licenseObj := createObjectFromLicense(lic)
-	oldVersionSubj := createSubjectFromLicenseAndCount(lic, lic.InUse)
-
-	conditions = append(conditions, &v1.Precondition{
-		Operation: v1.Precondition_OPERATION_MUST_MATCH,
-		Filter: &v1.RelationshipFilter{
-			ResourceType:       licenseObj.ObjectType,
-			OptionalResourceId: licenseObj.ObjectId,
-			OptionalRelation:   LicenseVersionStr,
-			OptionalSubjectFilter: &v1.SubjectFilter{
-				SubjectType:       oldVersionSubj.Object.ObjectType,
-				OptionalSubjectId: oldVersionSubj.Object.ObjectId,
-			},
-		},
-	})
-
-	if lic.InUse == newCount {
-		return updates, conditions //The version is essentially just the count at the moment, so a swap isn't technically a change. This may change in the future!
-	}
-
-	updates = append(updates, &v1.RelationshipUpdate{
-		Operation: v1.RelationshipUpdate_OPERATION_DELETE,
-		Relationship: &v1.Relationship{
-			Resource: licenseObj,
-			Relation: LicenseVersionStr,
-			Subject:  oldVersionSubj,
-		},
-	})
-
-	updates = append(updates, &v1.RelationshipUpdate{
-		Operation: v1.RelationshipUpdate_OPERATION_CREATE,
-		Relationship: &v1.Relationship{
-			Resource: licenseObj,
-			Relation: LicenseVersionStr,
-			Subject:  createSubjectFromLicenseAndCount(lic, newCount),
-		},
-	})
-
-	return updates, conditions
-}
-
-func createSubjectFromLicenseAndCount(lic *domain.License, count int) *v1.SubjectReference {
-	return &v1.SubjectReference{
-		Object: &v1.ObjectReference{
-			ObjectType: LicenseVersionStr,
-			ObjectId:   fmt.Sprintf("%s/%d", lic.Version, count),
-		},
-	}
-}
-
-func createObjectFromLicense(lic *domain.License) *v1.ObjectReference {
-	return &v1.ObjectReference{
-		ObjectType: LicenseObjectType,
-		ObjectId:   fmt.Sprintf("%s/%s", lic.OrgID, lic.ServiceID),
-	}
-}
-
-func createSeatAssignedPrecondition(subj domain.SubjectID, orgID string, svc domain.Service) *v1.Precondition {
-	return &v1.Precondition{
-		Operation: v1.Precondition_OPERATION_MUST_MATCH,
-		Filter: &v1.RelationshipFilter{
-			ResourceType:       LicenseSeatObjectType,
-			OptionalResourceId: fmt.Sprintf("%s/%s", orgID, svc.ID),
-			OptionalRelation:   "assigned",
-			OptionalSubjectFilter: &v1.SubjectFilter{
-				SubjectType:       SubjectType,
-				OptionalSubjectId: string(subj),
-			},
-		},
-	}
-}
-
-func createUserIsMemberOfOrgPrecondition(subj domain.SubjectID, orgID string) *v1.Precondition {
-	return &v1.Precondition{
-		Operation: v1.Precondition_OPERATION_MUST_MATCH,
-		Filter: &v1.RelationshipFilter{
-			ResourceType:       OrgType,
-			OptionalResourceId: orgID,
-			OptionalRelation:   "member",
-			OptionalSubjectFilter: &v1.SubjectFilter{
-				SubjectType:       SubjectType,
-				OptionalSubjectId: string(subj),
-			},
-		},
-	}
-}
-
-func createUserNotDisabledPrecondition(subj domain.SubjectID, orgID string) *v1.Precondition {
-	return &v1.Precondition{
-		Operation: v1.Precondition_OPERATION_MUST_NOT_MATCH,
-		Filter: &v1.RelationshipFilter{
-			ResourceType:       OrgType,
-			OptionalResourceId: orgID,
-			OptionalRelation:   "disabled",
-			OptionalSubjectFilter: &v1.SubjectFilter{
-				SubjectType:       SubjectType,
-				OptionalSubjectId: string(subj),
-			},
-		},
-	}
-}
-
-// GetLicense - Get the current license infoarmation
-func (s *SpiceDbAccessRepository) GetLicense(orgID string, serviceID string) (*domain.License, error) {
-	var license domain.License
-	resp, err := s.client.ReadRelationships(s.ctx, &v1.ReadRelationshipsRequest{
-		Consistency: &v1.Consistency{Requirement: &v1.Consistency_FullyConsistent{FullyConsistent: true}},
-		RelationshipFilter: &v1.RelationshipFilter{
-			ResourceType:       LicenseObjectType,
-			OptionalResourceId: fmt.Sprintf("%s/%s", orgID, serviceID),
-		},
-	})
-
-	if err != nil {
-		glog.Errorf("Failed to read License relation :%v", err.Error())
-		return nil, err
-	}
-
-	for {
-		v, err := resp.Recv()
-		if err != nil && err == io.EOF {
-			break
-		}
-		if err != nil {
-			glog.Errorf("Failed iterate License read response :%v", err.Error())
-			return nil, err
-		}
-		// The Max relation is read to extract the MAx count of the license
-		if v.Relationship.Relation == "max" {
-			glog.Infof("License - Max count: %v", v.Relationship.Subject.Object.ObjectId)
-			license.MaxSeats, err = strconv.Atoi(v.Relationship.Subject.Object.ObjectId)
-
-			if err != nil {
-				return nil, err
-			}
-		}
-		// The version is of the form: <Versionstring>/currentassignedseatscount
-		if v.Relationship.Relation == "version" {
-			version := v.Relationship.Subject.Object.ObjectId
-			glog.Infof("License - Version : %v", version)
-			//spilt with "/" and the second part of the string is the current assigned count
-			versionStrArr := strings.Split(version, "/")
-			if len(versionStrArr) != 2 {
-				return nil, fmt.Errorf("invalid license version %s", v.Relationship.Subject.Object.ObjectId)
-			}
-			currentAssignedCount, err := strconv.Atoi(versionStrArr[1])
-			if err != nil {
-				return nil, err
-			}
-			license.InUse = currentAssignedCount
-			license.Version = versionStrArr[0]
-		}
-		license.OrgID = orgID
-		license.ServiceID = serviceID
-	}
-
-	return &license, nil
-}
-
-// HasAnyLicense returns true if an org has at least one license applied, false otherwise for orgs without licenses or unknown orgs
-func (s *SpiceDbAccessRepository) HasAnyLicense(orgID string) (bool, error) {
-
-	resp, err := s.client.ReadRelationships(s.ctx, &v1.ReadRelationshipsRequest{
-		Consistency: &v1.Consistency{Requirement: &v1.Consistency_FullyConsistent{FullyConsistent: true}},
-		RelationshipFilter: &v1.RelationshipFilter{
-			ResourceType: LicenseObjectType,
-			OptionalSubjectFilter: &v1.SubjectFilter{
-				SubjectType:       OrgType,
-				OptionalSubjectId: orgID,
-			},
-		},
-		OptionalLimit: 1,
-	})
-
-	if err != nil {
-		glog.Errorf("Failed to read License relation :%v", err.Error())
-		return false, err
-	}
-
-	_, e := resp.Recv()
-
-	//No license found
-	if errors.Is(e, io.EOF) {
-		return false, nil
-	}
-	// error
-	if e != nil {
-		return false, e
-	}
-	//any result means license found.
-	return true, nil
-}
-
-// GetAssignable returns assignable seats for a given organization ID and service ID (which are not already assigned)
-func (s *SpiceDbAccessRepository) GetAssignable(orgID string, serviceID string) ([]domain.SubjectID, error) {
-	result, err := s.client.LookupSubjects(s.ctx, &v1.LookupSubjectsRequest{
-		Resource: &v1.ObjectReference{
-			ObjectType: LicenseObjectType,
-			ObjectId:   fmt.Sprintf("%s/%s", orgID, serviceID),
-		},
-		Permission:        "assignable",
-		SubjectObjectType: SubjectType,
-	})
-
-	if err != nil {
-		return nil, err
-	}
-
-	ids := make([]domain.SubjectID, 0)
-	for {
-		next, err := result.Recv()
-		if errors.Is(err, io.EOF) {
-			break
-		}
-		if err != nil {
-			return nil, err
-		}
-
-		ids = append(ids, domain.SubjectID(next.Subject.SubjectObjectId))
-	}
-	return ids, nil
-}
-
-// GetAssigned returns assigned seats for a given organization ID and service ID
-func (s *SpiceDbAccessRepository) GetAssigned(orgID string, serviceID string) ([]domain.SubjectID, error) {
-	result, err := s.client.LookupSubjects(s.ctx, &v1.LookupSubjectsRequest{
-		Resource: &v1.ObjectReference{
-			ObjectType: LicenseObjectType,
-			ObjectId:   fmt.Sprintf("%s/%s", orgID, serviceID),
-		},
-		Permission:        "access",
-		SubjectObjectType: SubjectType,
-	})
-
-	if err != nil {
-		return nil, err
-	}
-
-	ids := make([]domain.SubjectID, 0)
-	for {
-		next, err := result.Recv()
-		if errors.Is(err, io.EOF) {
-			break
-		}
-		if err != nil {
-			return nil, err
-		}
-
-		ids = append(ids, domain.SubjectID(next.Subject.SubjectObjectId))
-	}
-	return ids, nil
-}
-
-// ApplyLicense stores the given license associated with its service and organization
-func (s *SpiceDbAccessRepository) ApplyLicense(license *domain.License) error {
-	licenseID := fmt.Sprintf("%s/%s", license.OrgID, license.ServiceID)
-	licenseResource := &v1.ObjectReference{
-		ObjectType: LicenseObjectType,
-		ObjectId:   licenseID,
-	}
-
-	_, err := s.client.WriteRelationships(s.ctx, &v1.WriteRelationshipsRequest{
-		Updates: []*v1.RelationshipUpdate{
-			{
-				Operation: v1.RelationshipUpdate_OPERATION_CREATE,
-				Relationship: &v1.Relationship{
-					Resource: licenseResource,
-					Relation: "max",
-					Subject: &v1.SubjectReference{
-						Object: &v1.ObjectReference{
-							ObjectType: "max",
-							ObjectId:   strconv.Itoa(license.MaxSeats),
-						},
-					},
-				},
-			},
-			{
-				Operation: v1.RelationshipUpdate_OPERATION_CREATE,
-				Relationship: &v1.Relationship{
-					Resource: licenseResource,
-					Relation: "seats",
-					Subject: &v1.SubjectReference{
-						Object: &v1.ObjectReference{
-							ObjectType: LicenseSeatObjectType,
-							ObjectId:   licenseID,
-						},
-					},
-				},
-			},
-			{
-				Operation: v1.RelationshipUpdate_OPERATION_CREATE,
-				Relationship: &v1.Relationship{
-					Resource: licenseResource,
-					Relation: "version",
-					Subject: &v1.SubjectReference{
-						Object: &v1.ObjectReference{
-							ObjectType: LicenseVersionStr,
-							ObjectId:   fmt.Sprintf("%s/%d", license.Version, license.InUse),
-						},
-					},
-				},
-			},
-			{
-				Operation: v1.RelationshipUpdate_OPERATION_CREATE,
-				Relationship: &v1.Relationship{
-					Resource: licenseResource,
-					Relation: "org",
-					Subject: &v1.SubjectReference{
-						Object: &v1.ObjectReference{
-							ObjectType: OrgType,
-							ObjectId:   license.OrgID,
-						},
-					},
-				},
-			},
-		},
-		OptionalPreconditions: []*v1.Precondition{{
-			Operation: v1.Precondition_OPERATION_MUST_NOT_MATCH,
-			Filter: &v1.RelationshipFilter{
-				ResourceType:       licenseResource.ObjectType,
-				OptionalResourceId: licenseResource.ObjectId,
-			},
-		}},
-	})
-
-	return err
 }
 
 // AddSubject stores a subject associated with an organization. If a subject is already found, it returns an error.
